[package]
name = "contrib-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.4"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
